5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1723_2496.log
== TEST (2019-05-09 10:12:16) 
-- CODE:
n = int(input("Insira o numero: "))

while (n >= 0):
	n = n + 1
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:32) 
-- CODE:
n = int(input("Insira o numero: "))

while (n >= 0):
	n = n + 1
print(n)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:42) 
-- CODE:
n = int(input("Insira o numero: "))

while (n >= 0):
	n = n + 1
   print(n)
-- ERROR:
File "XXXX", line 5
    print(n)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:47) 
-- CODE:
n = int(input("Insira o numero: "))

while (n >= 0):
	n = n + 1
	print(n)
-- ERROR:
File "XXXX", line 5
    print(n)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:17:02) 
-- CODE:
n1 = 0
n = int(input("Insira o numero: "))

while (n >= 0):
	n1 = n + n1
	
-- ERROR:
File "XXXX", line 5
    print(n)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:16) 
-- CODE:
n1 = 0

while (n >= 0):
	n = int(input("Insira o numero: "))n = int(input("Insira o numero: "))
	n1 = n + n1
print(n1)
	
-- ERROR:
File "XXXX", line 4
    n = int(input())n = int(input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:26) 
-- CODE:
n1 = 0

while (n >= 0):
	n = int(input("Insira o numero: "))
	n1 = n + n1
print(n1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (n >= 0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:42) 
-- CODE:
n1 = 0
n = 0
while (n >= 0):
	n = int(input("Insira o numero: "))
	n1 = n + n1
print(n1)
	
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:27) 
-- CODE:
n1 = 0
n = 0
while (n >= 0):
	n = int(input("Insira o numero: "))
	n1 = n + n1
print(n1)
	
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:29:49) 
-- CODE:
cont = 0
soma = 0
n = int(input("Insira o numero: "))

while ((n != -1)):
	cont = cont + 1
	soma = soma + n
	n = int(input("Insira o numero: "))
if(n == -1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:30:05) 
-- CODE:
cont = 0
soma = 0
n = int(input("Insira o numero: "))

while ((n != -1)):
	cont = cont + 1
	soma = soma + n
	n = int(input("Insira o numero: "))
if(n == -1):
	print(soma)
-- EXECUTION TIME:
0.203103
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
